--- a/gg-project-master/html/home.html
+++ b/gg-project-master/html/home.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container-home">
       <nav class="navigation">
-        <div class="wrapper">
+        <div class="wrapper-ct__nav">
           <div class="flex-block">
         <div class="navigation-middle">
           <!-- сделать ссылкой -->
@@ -77,7 +77,7 @@
         <button class="slide-button" disabled>Lorem.</button>
       </div>
       <div class="container-info__our-advantages">
-        <div class="wrapper">
+        <div class="wrapper__ct-out-ad">
         <div class="our-advantages__title">Our advantages</div>
         <!-- Here is first block-->
         <div class="block__line-our-advantage">
@@ -145,7 +145,7 @@
       </div>
       <!-- Рамки для лого -->
       <div class="container-info__our-partners">
-        <div class="wrapper">
+        <div class="wrapper__ct-out-par">
         <div class="our-partners__title">Our partners</div>
         <div class="img-partners-wrap1">
           <div class="partners partner-razer">Razer</div>
@@ -196,6 +196,7 @@
       </div>
 
       <div class="container-info__events">
+         <div class="wrapper__ct-out-ev">
         <div class="events__title">Upcoming events</div>
         <div class="events__middle">
           <div class="event-1__hover">
@@ -239,11 +240,12 @@
             <p class="btn-readmore"><a href="#">Read more..--></a></p>
           </div>
         </div>
+      </div>
     </div>
       <!--  добавить значки к каждому об"екту-->
       <div class="container-info__our-targets">
         <!-- <svg width="1200" height="330" xmlns="http://www.w3.org/2000/svg"><style>.title { font: 20px Arial; fill: black; }</style><path d="M272,128 C339.2,128 428.8,64 496,64" stroke-width="2" stroke="#DDD" fill="transparent"></path><path d="M272,128 C339.2,128 428.8,192 496,192" stroke-width="2" stroke="#DDD" fill="transparent"></path><path d="M528,192 C595.2,192 684.8,128 752,128" stroke-width="2" stroke="#DDD" fill="transparent"></path><path d="M528,192 C595.2,192 684.8,256 752,256" stroke-width="2" stroke="#DDD" fill="transparent"></path><path d="M784,128 C851.2,128 940.8,192 1008,192" stroke-width="2" stroke="#DDD" fill="transparent"></path><path d="M784,256 C851.2,256 940.8,192 1008,192" stroke-width="2" stroke="#DDD" fill="transparent"></path><circle cx="256" cy="128" r="16" stroke-width="3" stroke="#51BFFF" fill="white"></circle><text class="title" text-anchor="end" x="224" y="134">Artifical Intelligence</text><circle cx="512" cy="64" r="16" stroke-width="3" stroke="#51BFFF" fill="white"></circle><text class="title" text-anchor="end" x="480" y="70">Engine Intelligence</text><circle cx="512" cy="192" r="16" stroke-width="3" stroke="#51BFFF" fill="white"></circle><text class="title" text-anchor="end" x="480" y="198">Engine Intelligence</text><circle cx="768" cy="128" r="16" stroke-width="3" stroke="#51BFFF" fill="white"></circle><text class="title" text-anchor="end" x="736" y="134">Neuro-like networks</text><circle cx="768" cy="256" r="16" stroke-width="3" stroke="#51BFFF" fill="white"></circle><text class="title" text-anchor="end" x="736" y="262">Heuristic Programming</text><circle cx="1024" cy="192" r="16" stroke-width="3" stroke="#51BFFF" fill="white"></circle><text class="title" text-anchor="end" x="992" y="198">Heuristic modeling</text></svg> -->
-        <div class="wrapper">
+        <div class="wrapper-ct__our-tar">
         <div class="our-targets__title">Our targets</div>
         <div class="our-targets__middle">
           <div class="targets__row-1">
