--- a/gg-project-master/html/home.html
+++ b/gg-project-master/html/home.html
@@ -480,6 +480,7 @@
       </div>
 
       <div class="container__bonus">
+        <!-- <div class="bonus-wrapper"> -->
         <div class="bonus-mid">
           <div class="bonus-left">
             <div class="bonus-logo">cyber-sport.ua</div>
@@ -490,7 +491,9 @@
               <div class="bonus-text">and get a $ 20 bonus</div>
               <div class="bonus-text">to your account</div>
               <div class="bonus-but"></div>
+              <div class="glow-button">GET BONUS</div>
             </div>
+          <!-- </div> -->
           </div>
         </div>
       </div>
