--- a/gg-project-master/html/home.html
+++ b/gg-project-master/html/home.html
@@ -78,6 +78,7 @@
       <header class="slide-desc">
         <p class="slider-title">Lorem, ipsum dolor.</p>
         <button class="slide-but" disabled>Lorem.</button>
+        <!-- <a href="" class="btn btn3">Lorem to magazine.</a> -->
       </header>
       <div class="container__advantage">
         <div class="advantage-wrapper">
@@ -306,7 +307,7 @@
 
       <div class="container__games">
         <div class="games-wrapper">
-        <div class="games-title">We have new games from our world</div>
+        <div class="games-title">We have new games</div>
         <div class="games-mid">
           <!-- slot-1 -->
 
@@ -491,7 +492,7 @@
         <!-- <div class="bonus-wrapper"> -->
         <div class="bonus-mid">
           <div class="bonus-left">
-            <div class="bonus-logo">cyber-sport.ua</div>
+            <div class="bonus-logo"><a href="#">cyber-sport.ua</a> </div>
           </div>
           <div class="bonus-right">
             <div class="bonus-desc">
@@ -515,26 +516,64 @@
               <div class="footer-subtitle"><a href="#">Careers</a></div>
               <div class="footer-subtitle"><a href="#" >Corporate Sales</a></div>
               <div class="footer-subtitle"><a href="#" >Where to Buy</a></div>
+
+
             </div>
+            
+            <button class="accordion"><div class="footer-title"> About</div></button>
+            <div class="panel">
+              <div class="footer-subtitle"><a href="#" >About us</a></div>
+              <div class="footer-subtitle"><a href="#">Careers</a></div>
+              <div class="footer-subtitle"><a href="#" >Corporate Sales</a></div>
+              <div class="footer-subtitle"><a href="#" >Where to Buy</a></div>
+              </div>
+
+
+
+
+
             <div class="footer-block">
               <div class="footer-title">Support</div>
-              <div class="footer-subtitlee"><a href="#" >Contact</a></div>
+              <div class="footer-subtitle"><a href="#" >Contact</a></div>
               <div class="footer-subtitle"><a href="#" >Returns</a></div>
               <div class="footer-subtitle"><a href="#" >Warranty</a></div>
               <div class="footer-subtitle"><a href="#" >Product Registration</a></div>
               <div class="footer-subtitle"><a href="#" >Help</a></div>
             </div>
+
+            <button class="accordion"><div class="footer-title">Support</div></button>
+            <div class="panel">
+              <div class="footer-subtitle"><a href="#" >Contact</a></div>
+              <div class="footer-subtitle"><a href="#" >Returns</a></div>
+              <div class="footer-subtitle"><a href="#" >Warranty</a></div>
+              <div class="footer-subtitle"><a href="#" >Product Registration</a></div>
+              <div class="footer-subtitle"><a href="#" >Help</a></div>
+            </div>
+
+
             <div class="footer-block">
               <div class="footer-title">Legal</div>
               <div class="footer-subtitle"><a href="#" >Privacy</a></div>
               <div class="footer-subtitle"><a href="#" >Terms</a></div>
               <div class="footer-subtitle"><a href="#" >Patents</a></div>
             </div>
+            
+            <button class="accordion"><div class="footer-title">Legal</div></button>
+            <div class="panel">
+              <div class="footer-subtitle"><a href="#" >Privacy</a></div>
+              <div class="footer-subtitle"><a href="#" >Terms</a></div>
+              <div class="footer-subtitle"><a href="#" >Patents</a></div>
+              </div>
             <div class="footer-block">
               <div class="footer-title">Other</div>
               <div class="footer-subtitle"><a href="#" >Account</a></div>
               <div class="footer-subtitle"><a href="#" >Affiliate Program</a></div>
             </div>
+            <button class="accordion"><div class="footer-title">Other</div></button>
+            <div class="panel">
+              <div class="footer-subtitle"><a href="#" >Account</a></div>
+              <div class="footer-subtitle"><a href="#" >Affiliate Program</a></div>
+              </div>
           </div>
           <div class="footer-links">
               <a href=""><i class="fab fa-facebook-f"></i></a> 
