--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>gg</title>
     <link rel="stylesheet" href="./library/fontawesome-pro-5.15.1-web/css/all.min.css"/>
     <!-- <link rel="stylesheet" href="../css/light-theme.css" /> -->
-    <link rel="stylesheet" href="./css/container/container-home.css" />
+    <link rel="stylesheet" href="./style/container/container-home.css" />
   </head>
   <body>
     <div class="container__home">
@@ -240,7 +240,7 @@
             </div>
           </div>
           <object type="image/svg+xml" data="untitled.svg">
-            <img src="./gallery/untitled.svg" class="" />
+            <img src="./style/gallery/untitled.svg" class="" />
           </object>
           <div class="targets-row reverse">
             <div class="target-block">
@@ -260,7 +260,7 @@
             </div>
           </div>
           <object type="image/svg+xml" data="untitled.svg">
-            <img src="./gallery/untitled-reverse.svg" />
+            <img src="./style/gallery/untitled-reverse.svg" />
           </object>
           <div class="targets-row">
             <div class="target-block">
@@ -280,7 +280,7 @@
             </div>
           </div>
           <object type="image/svg+xml" data="untitled.svg">
-            <img src="./gallery/untitled.svg" class="" />
+            <img src="./style/gallery/untitled.svg" class="" />
           </object>
           <div class="targets-row reverse">
             <div class="target-block">
