--- a/index.html
+++ b/index.html
@@ -589,6 +589,6 @@
       </footer>
     </div>
 
-    <script src="../js/home.js"></script>
+    <script src="./js/home.js"></script>
   </body>
 </html>
