--- a/index.html
+++ b/index.html
@@ -140,18 +140,19 @@
         <div class="partners-wrapper">
         <div class="partners-title">Our partners</div>
         <div class="partners-top">
-          <div class="partners partner-razer">Razer</div>
-          <div class="partners partner-hyperx">HyperX</div>
-          <div class="partners partner-lenovo">Lenovo</div>
-          <div class="partners partner-a4tech">A4tech</div>
+          <div class="partners partner-razer"><a href="">Razer</a></div>
+          <div class="partners partner-hyperx"><a href="">HyperX</a></div>
+          <div class="partners partner-a4tech"><a href="">A4tech</a></div>
+          <div class="partners partner-lenovo"><a href="">Lenovo</a></div>
+
         
         </div>
 
         <div class="partners-bot">
-          <div class="partners partner-lenovo">Lenovo</div>
-          <div class="partners partner-a4tech">A4tech</div>
-          <div class="partners partner-razer">Razer</div>
-          <div class="partners partner-hyperx">HyperX</div>
+          <div class="partners partner-lenovo"><a href="">Lenovo</a></div>
+          <div class="partners partner-a4tech"><a href="">A4tech</a></div>
+          <div class="partners partner-razer"><a href="">Razer</a></div>
+          <div class="partners partner-hyperx"><a href="">HyperX</a></div>
  
         </div>
         </div>
