--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 
 
           <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">x</a>
             <a href="# " class="sidenav-element">About</a>
             <a href="#" class="sidenav-element">Services</a>
             <a href="#" class="sidenav-element">Clients</a>
@@ -80,7 +79,9 @@
               <a href=""><i class="fab fa-telegram-plane"></i></a> 
           </div>
           </div>
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">X</a>
           <span class="sidespan" onclick="openNav()">☰</span>
+
      
     
         <!-- <button class="btn-burger"><a href="#"><i class="fas fa-bars"></i></a> </button> -->
