--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </ul>
       <header class="slide-desc">
         <p class="slider-title">Lorem, ipsum dolor.</p>
-        <button class="slide-but" disabled>Lorem.</button>
+        <button class="slide-but" >Lorem.</button>
       </header>
       <div class="container__advantage">
         <div class="advantage-wrapper">
